--- a/musker/templates/profile_list.html
+++ b/musker/templates/profile_list.html
@@ -1,5 +1,5 @@
 {%extends 'base.html' %}
-
+{% load static %}
 {% block content %}
     <h1>Profile List</h1>
     <br>
@@ -9,12 +9,14 @@
        <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+            <img src="{% static 'images/4691440_unsplash_icon.png'%}" class="img-fluid rounded-start" alt="Profile Image">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">{{ profile.user.username }} </h5>
-              <p class="card-text">@{{ profile.user.username|lower }}</p>
+              <p class="card-text"> <a href="{% url 'profile' profile.user.id %}">@{{ profile.user.username|lower }}
+
+              </a></p>
               <br><br>
               <p class="card-text"><small class="text-muted">Last Updated:  {{profile.date_modified}}</small></p>
             </div>
