add a for statement to show the tweeps and add a div to arganize the tweeps

--- a/musker/templates/home.html
+++ b/musker/templates/home.html
@@ -2,4 +2,12 @@
 
 {% block content %}
     <h1>Tweeps!</h1>
+    {% for tweep in tweeps %}
+
+
+        <div class="alert alert-dark" role="alert">
+            {{ tweep }}
+        </div>
+         <br><br>
+    {% endfor %}
 {% endblock %}
