--- a/musker/templates/profile.html
+++ b/musker/templates/profile.html
@@ -8,7 +8,20 @@
         <div class="row">
             <div class="col-8">
                 <h1>{{profile.user.username }}'s Profile</h1>
-            </div>
+                
+                
+                {% if tweeps %}
+                  {% for tweep in tweeps %}
+
+
+                    <div class="alert alert-dark" role="alert">
+                        {{ tweep }}
+                    </div>
+                    <br><br>
+                  {% endfor %}
+                {% endif %}  
+            
+              </div>
             <div class="col-4">
 
                 <div class="card">
